GNOME Bugzilla – Bug 763121
vaapidecoder_h264/5: leaks when parsing fails
Last modified: 2016-03-09 17:17:14 UTC
Seems like h264 and h265 parsers leak when something goes wrong in parsing. Patches to follow.
Created attachment 323132 [details] [review] vaapidecoder_h264: plug leak of h264 parsing info If something goes wrong while parsing, the info object is being leaked
Created attachment 323133 [details] [review] vaapidecoder_h265: plug leak of h265 parsing info If something goes wrong while parsing, the info object is being leaked
I was only able to test the h264 patch as I don't have any faulty h265 streams here.
Patches lgtm,,, push for 1.8 ??
Your decision :)
(In reply to Sebastian Dröge (slomo) from comment #5) > Your decision :) After 1.8 then :)
Attachment 323132 [details] pushed as 2b47bf8 - vaapidecoder_h264: plug leak of h264 parsing info Attachment 323133 [details] pushed as 0a9161a - vaapidecoder_h265: plug leak of h265 parsing info