vaapidecoder_h264: plug leak of h264 parsing info

If something goes wrong while parsing, the info object is
being leaked

https://bugzilla.gnome.org/show_bug.cgi?id=763121